# A95X-Linux-BuildEnv

./: README.md  menu.sh  setup.sh  supported-devices.txt
buildroot/: Makefile  TOOLSENV.sh  setup-build-env.sh
buildroot/boot/uboot/: Config.in  uboot.mk
buildroot/configs/: meson3_3.10_f16_defconfig  meson6_3.0_defconfig  meson6_3.0_g18_defconfig  meson6_3.0_g18_secureos_defconfig  meson6_3.10_g18_QT48_defconfig  meson6_3.10_g18_defconfig  meson6_3.10_g18_release_defconfig  meson6_3.10_g18_x_defconfig  meson6_3.10_g18_x_release_defconfig  meson6_3.10_g35_defconfig  meson6_3.10_g35_release_defconfig  meson6tv_3.0_h12_defconfig  meson6tv_3.10_h15_ramdisk_defconfig  meson6tv_3.10_player_defconfig  meson6tv_mt_defconfig  meson6tv_yahoo_defconfig  meson6tvd_3.10_h13_base_defconfig  meson6tvd_3.10_h13_defconfig  meson6tvd_3.10_h13_x_defconfig  meson6tvd_3.10_player_defconfig  meson8_3.10_vlsi_defconfig  meson8_k200_defconfig  meson8_k200_release_defconfig  meson8_k200_x_defconfig  meson8_k200_x_release_defconfig  meson8_k200b_defconfig  meson8_k200b_release_defconfig  meson8_k200b_x_defconfig  meson8_k200b_x_release_defconfig  meson8b_3.10_vlsi_defconfig  meson8b_amlogic_odroidc_defconfig  meson8b_amlogic_odroidc_x_defconfig  meson8b_m200_defconfig  meson8b_m200_release_defconfig  meson8b_m200_x_defconfig  meson8b_m200_x_release_defconfig  meson8b_m201_defconfig  meson8b_m201_release_defconfig  meson8b_m201_x_defconfig  meson8b_m201_x_release_defconfig  (+36 more)
buildroot/fs/cpio/: Config.in  cpio.mk  init
buildroot/fs/ext2/: Config.in  ext2.mk
buildroot/linux/: Config.in  linux.mk
buildroot/linux/amlogic-3.10/: linux-3.10-Makefile.patch  linux-3.10-drivers-amlogic-amports.patch  linux-3.10-drivers-amlogic-display-osd-Kconfig.patch  linux-3.10-drivers-amlogic-display-osd-Makefile.patch  linux-3.10-drivers-amlogic-display-osd-osd_dev.patch  linux-3.10-drivers-amlogic-display-osd-osd_hw.patch  linux-3.10-drivers-amlogic-display-osd-osd_main.patch  linux-3.10-drivers-amlogic-display-osd-osd_ump.patch  linux-3.10-drivers-amlogic-hdmi-hdmi_tx-hdmi_tx_edid.patch  linux-3.10-drivers-amlogic-yuvplayer.patch  linux-3.10-drivers-gpu-drm-Kconfig.patch  linux-3.10-drivers-gpu-drm-Makefile.patch  linux-3.10-include-linux-amlogic-osd-osd.patch  linux-3.10-include-linux-amlogic-osd-osd_dev.patch  linux-3.10-include-linux-amlogic-osd-osd_hw.patch  linux-3.10-include-linux-amlogic-osd-osd_main.patch  linux-amlogic-3.10-bringup-include-linux-amlogic-amports-vformat.h.patch
buildroot/linux/amlogic-3.14/: linux-3.14-Makefile.patch  linux-3.14-drivers-amlogic-mmc-emmc.patch
buildroot/linux/mali_drm/: .built-in.o.cmd
buildroot/package/: Config.in  Config.in.host  pkg-download.mk  pkg-kconfig.mk
buildroot/package/alsa-lib/: alsa-lib.mk
buildroot/package/aml_af_alg/: Config.in  aml_af_alg.mk
buildroot/package/aml_bdk/: Config.in  aml_bdk.mk
buildroot/package/aml_customer/: Config.in  aml_customer.mk  aml_customer.patch
buildroot/package/aml_image_packer/: Config.in.host  aml_image_packer.mk
buildroot/package/aml_img_packer_new/: Config.in.host  aml_img_packer_new.mk
buildroot/package/aml_nand/: Config.in  aml_nand-aml_nftl_new-Makefile.patch  aml_nand.mk
buildroot/package/aml_pmu/: Config.in  aml_pmu.mk
buildroot/package/aml_thermal/: Config.in  aml_thermal.mk
buildroot/package/aml_touch/: Config.in  aml_touch.mk
buildroot/package/aml_tvin/: Config.in  aml_tvin.mk
buildroot/package/aml_uboot_customer/: Config.in  aml_uboot_customer.mk
buildroot/package/aml_util/: Config.in  aml_util.mk
buildroot/package/amlogic_test/: Config.in  amlogic_test.mk  amlogic_test.sh  auto_freq.sh  auto_reboot.sh  disk-test.sh  wifi_test.sh
buildroot/package/multimedia/gst-aml-plugins/gst-aml-plugins-0.10.0/amlaudio/: Makefile.am  Makefile.in  gstamlaout.c  gstamlaout.h  gstamlaudioheader.c  gstamlaudioheader.h
buildroot/package/multimedia/gst-aml-plugins/gst-aml-plugins-0.10.0/amlvideo/: Makefile.am  Makefile.in  gstamlvideoheader.c  gstamlvideoheader.h  gstamlvout.c  gstamlvout.h
buildroot/package/multimedia/gst-aml-plugins/gst-aml-plugins-0.11.0/amlaudio/AMLASINK/: Makefile.am  Makefile.in  amlasink_prop.h  gstamlasink.c  gstamlasink.h
buildroot/package/multimedia/gst-aml-plugins/gst-aml-plugins-0.11.0/amlvideo/AMLVSINK/: Makefile.am  Makefile.in  amlvsink_prop.c  amlvsink_prop.h  gstamlvsink.c  gstamlvsink.h  rectangleInfo.c  rectangleInfo.h
buildroot/package/multimedia/gst-aml-plugins/gst-aml-plugins-0.11.0/common/: Makefile.am  Makefile.in
buildroot/package/multimedia/gst-aml-plugins/gst-aml-plugins-0.11.0/common/amlsysctl/: gstamlsysctl.c  gstamlsysctl.h
buildroot/package/multimedia/gst-aml-plugins/gst-aml-plugins-0.11.0/common/amstreaminfo/: amlaudioinfo.h  amlstreaminfo.c  amlstreaminfo.h  amlvideoinfo.h
buildroot/package/multimedia/gst-aml-plugins/gst-aml-plugins-0.11.0/common/include/amports/: vformat.h
buildroot/package/multimedia/gst-aml-plugins/gst-aml-plugins-0.11.0/common/include/ppmgr/: ppmgr.h
buildroot/package/multimedia/gst-aml-plugins1/gst-aml-plugins-1.0/audio/amladec/: Android.mk  Makefile.am  Makefile.in  amlaudioinfo.c  gstamladec.c  gstamladec.h
buildroot/package/multimedia/gst-aml-plugins1/gst-aml-plugins-1.0/video/amlvdec/: Android.mk  Makefile.am  Makefile.in  amlvideoinfo.c  gstamlvdec.c  gstamlvdec.h
buildroot/package/multimedia/gst-app/gst-app-0.11.0/amlplay/: Makefile.am  Makefile.in  fsl_player_debug.c  fsl_player_debug.h  fsl_player_drm_types.h  fsl_player_osal.c  fsl_player_osal.h  fsl_player_queue.c  fsl_player_queue.h  fsl_player_types.h  fsl_player_ui_message.c  fsl_player_ui_message.h  gst_snapshot.c  gst_snapshot.h  mfw_gplay.c  mfw_gplay_core.c  mfw_gplay_core.h  playlist.c  playlist.h
buildroot/release/: release.py
buildroot/system/: Config.in
dtb/: README.md  gxl_p212_2g.dtb-S905X-Generic
misc-build-scripts/: inst-packages-ubuntu.sh  menu-main.sh
output/: rootfs.cpio.uboot
output-sample/: dtb.img  rootfs.cpio.uboot
recovery/: Readme.md
sample-output/: Readme.md
toolchains/: README.md  get-toolschains.sh
(+7253 files in other folders)
